--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,12 @@
-# PostgreSQL. Versions 8.2 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On OS X with Homebrew:
-#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
-# On OS X with MacPorts:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem 'pg'
-#
+#default: &default
+#  adapter: postgresql
+#  encoding: unicode
+
 development:
   adapter: postgresql
   encoding: unicode
-  database: bytheendoftheyear
-  host: localhost
+  database: <%= ENV["database_name"] %>
+  host: <%= ENV["database_host"] %>
   pool: 5
 
   # Connect on a TCP socket. Omitted by default since the client uses a
